Added midpoint home to tomcat config  - because the instructions told me to  - but nothing changed, because tomcat cannot    see midpoint yet.